# cmakeexample

./: CMakeLists.txt  README.md  myapp.c
appio/: CMakeLists.txt  appio.c  appio.h
apptest/: CMakeLists.txt  apptest.c
appui/: CMakeLists.txt  appui.c  appui.h
